--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <main>
         <section id="home">
             <h2>Home</h2>
-            <p>This is a website where I will blog about the most exciting things that have happened to Luna in the past week. 
-                This includes fun new adventures, trying out new foods, weight updates, etc. Feel free to check out the about section to find out more about Luna!</p>
+            <p>This is a website where I will blog about the most exciting things that have happened to Luna in the past week. This includes fun new adventures, trying out new foods, weight updates, etc. Feel free to check out the about section to find out more about Luna!</p>
         </section>
         <section id="about">
             <h2>About Luna</h2>
