Update contact email address

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header>
         <h1>Weekly Luna</h1>
         <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
+             <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>           
         </nav>
     </header>
     <main>
@@ -29,7 +29,8 @@
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>You can reach me at <a href="mailto:lucastbos@icloud.com">lucastbos@icloud.com</a>.</p>
+            <p>You can reach me at <a href="mailto:draworanges.492@gmail.com">draworanges.492@gmail.com
+            </a>.</p>
         </section>
     </main>
     <footer>
