Update contact email address and contact.html page

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <main>
         <section id="contact">
             <h2>Contact</h2>
-            <p>You can reach me at <a href="mailto:lucastbos@icloud.com">lucastbos@icloud.com</a>.</p>
+            <p>You can reach me at <a href="mailto:draworanges.492@gmail.com">draworanges.492@gmail.com</a>.</p>
         </section>
     </main>
     <footer>
