--- a/about.html
+++ b/about.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Luna</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>My Website</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VW16KMQ0J9"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-VW16KMQ0J9');
+    </script>
 </head>
 <body>
+    <h1>Welcome to My Website</h1>
+    <p id="myElementId">Click me!</p>
+    <script src="script.js"></script>
+</body>
+</html>
     <header>
         <h1>About Luna</h1>
         <nav>
