--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <img src="images/IMG_5600.heic" alt="Luna">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Weekly Luna</title>
+    <link rel="stylesheet" href="styles.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VW16KMQ0J9"></script>
     <script>
@@ -15,25 +17,26 @@
     </script>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p id="myElementId">Click me!</p>
+    <h1></h1>
+    <p id="myElementId"></p>
     <script src="script.js"></script>
 </body>
 </html>
     <header>
         <h1>Weekly Luna</h1>
         <nav>
-             <ul>
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-            </ul>           
+            </ul>
         </nav>
     </header>
     <main>
         <section id="home">
-            <h2>What is this about?</h2>
-            <p>This is a website where I will blog about the most exciting things that have happened to Luna in the past week. This includes fun new adventures, trying out new foods, weight updates, etc. Feel free to check out the about section to find out more about Luna!</p>
+            <h2>Home</h2>
+            <p>Testing if this will actually work</p>
+            <img src="images/your-image.png" alt="Profile Picture">
         </section>
         <section id="about">
             <h2>About Luna</h2>
@@ -41,8 +44,7 @@
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>You can reach me at <a href="mailto:draworanges.492@gmail.com">draworanges.492@gmail.com
-            </a>.</p>
+            <p>You can reach me at <a href="mailto:lucastbos@icloud.com">lucastbos@icloud.com</a>.</p>
         </section>
     </main>
     <footer>
