--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <img src="images/IMG_5600.heic" alt="Luna">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Weekly Luna</title>
+    <link rel="stylesheet" href="styles.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VW16KMQ0J9"></script>
     <script>
