--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
     </script>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p id="myElementId">Click me!</p>
+    <h1></h1>
+    <p id="myElementId"></p>
     <script src="script.js"></script>
 </body>
 </html>
