--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <img src="images/IMG_5600.heic" alt="Luna">
+    <img src="images/IMG_5600.heic" alt="Profile Picture">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weekly Luna</title>
@@ -36,7 +36,6 @@
         <section id="home">
             <h2>Home</h2>
             <p>Testing if this will actually work</p>
-            <img src="images/your-image.png" alt="Profile Picture">
         </section>
         <section id="about">
             <h2>About Luna</h2>
