Update HTML to use Imgur for profile picture

--- a/index.html
+++ b/index.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <img src="images/IMG_5600.heic" alt="Profile Picture">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weekly Luna</title>
     <link rel="stylesheet" href="styles.css">
+                <img src="https://imgur.com/a/profile-picture-Fb6lAOP" alt="Profile Picture">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VW16KMQ0J9"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-
         gtag('config', 'G-VW16KMQ0J9');
     </script>
 </head>
 <body>
-    <h1></h1>
-    <p id="myElementId"></p>
-    <script src="script.js"></script>
-</body>
-</html>
     <header>
         <h1>Weekly Luna</h1>
         <nav>
@@ -37,7 +31,13 @@
             <h2>Home</h2>
             <p>Testing if this will actually work</p>
         </section>
+        <section id="about">
+            <h2>About Luna</h2>
+            <p>Luna is a gargoyle gecko born on January 21 2021.</p>
         </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>You can reach me at <a href="mailto:draworanges.492@gmail.com">draworanges.492@gmail.com</a>.</p>
         </section>
     </main>
     <footer>
