--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weekly Luna</title>
     <link rel="stylesheet" href="styles.css">
-                <img src="https://imgur.com/a/profile-picture-Fb6lAOP" alt="Profile Picture">
+                <img src="https://i.imgur.com/gzpoMoU.jpg" alt="Profile Picture">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VW16KMQ0J9"></script>
     <script>
