Resolve conflicts and apply latest changes

--- a/images/about.html
+++ b/images/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <img src="images/IMG_5600.heic" alt="Luna">
+    <img src="images/IMG_5600.jpg" alt="Luna">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weekly Luna</title>
