Comprehensive update: added colors, more text, moved files, adjusted HTML and CSS

--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <img src="images/IMG_5600.jpg" alt="Luna">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weekly Luna</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Make sure this path is correct -->
+    <link rel="stylesheet" href="styles.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VW16KMQ0J9"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
+
         gtag('config', 'G-VW16KMQ0J9');
     </script>
 </head>
 <body>
+    <h1></h1>
+    <p id="myElementId"></p>
+    <script src="script.js"></script>
+</body>
+</html>
     <header>
-        <h1>Weekly Luna</h1>
+        <h1>Contact Weekly Luna</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -26,22 +33,13 @@
         </nav>
     </header>
     <main>
-        <section id="home">
-            <h2>Home</h2>
-            <p>Testing if this will actually work</p>
-            <img src="IMG_5600.jpg" alt="Profile Picture">
-        </section>
-        <section id="about">
-            <h2>About Luna</h2>
-            <p>Luna is a gargoyle gecko born on January 21 2021.</p>
-        </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>You can reach me at <a href="mailto:draworanges.492@gmail.com">draworanges.492@gmail.com</a>.</p>
+            <p>You can reach me at <k href="mailto:draworanges.492@gmail.com">draworanges.492@gmail.com</k>. I am avaliable all week and will respond to any questions related to Luna and her life. Most of the time I will be able to respond back to you in about maximum 24 hours. </p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Weekly Luna</p>
+        <a>&copy; Weekly Luna</a>
     </footer>
     <script src="script.js"></script>
 </body>
