--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <img src="images/IMG_5600.jpg" alt="Profile Picture">
     <title>Weekly Luna</title>
-    <link rel="stylesheet" href="styles.css">
-                <img src="https://i.imgur.com/gzpoMoU.jpg" alt="Profile Picture">
+    <link rel="stylesheet" href="styles.css"> <!-- Make sure this path is correct -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VW16KMQ0J9"></script>
     <script>
@@ -29,19 +29,11 @@
     <main>
         <section id="home">
             <h2>Home</h2>
-            <p>Testing if this will actually work</p>
-        </section>
-        <section id="about">
-            <h2>About Luna</h2>
-            <p>Luna is a gargoyle gecko born on January 21 2021.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>You can reach me at <a href="mailto:draworanges.492@gmail.com">draworanges.492@gmail.com</a>.</p>
+            <p>Welcome to Weekly Luna! This is my first website that I created and I will be posting some interesting things that have happened to my gecko in the past week. These things can range from exciting adventures to trying out new foods to a new setup in her tank. Hopefully you'll be happy to explore the rest of the website and feel free to check Luna's about page and contact me if you have any questions regarding Luna!</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Weekly Luna</p>
+        <a>&copy; Weekly Luna</a>
     </footer>
     <script src="script.js"></script>
 </body>
