--- a/about.html
+++ b/about.html
@@ -35,11 +35,12 @@
     <main>
         <section id="about">
             <h2>About Luna</h2>
-            <p>Luna is a gargoyle gecko born on January 21 2021.</p>
+            <p>Luna is a gargoyle gecko born on January 21 2021. She has some red spots across her body and a little lipstick. I got Luna at a reptile expo in Switzerland and she has been a great pet ever since. I really enjoy housing these types of creatures because it is a very rewarding and unique experience whenever someone comes to visit and they see that you have a gecko. She is also known to be quite jumpy and a little skinny. For the past 2 months I have been giving her extra food to make sure that she can grow to 50 grams. 
+            </p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Weekly Luna</p>
+        <a>&copy; Weekly Luna</a>
     </footer>
     <script src="script.js"></script>
 </body>
