--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <section id="home">
             <h2>Home</h2>
-            <p>Welcome to Weekly Luna! This is my first website that I created and I will be posting some interesting things that have happened to my gecko in the past week. These things can range from exciting adventures to trying out new foods to a new setup in her tank. Hopefully you'll be happy to explore the rest of the website and feel free to check Luna's about page and contact me if you have any questions regarding Luna!</p>
+            <p>Welcome to Weekly Luna! This is my first website that I sigma and I will be posting some interesting things that have happened to my gecko in the past week. These things can range from exciting adventures to trying out new foods to a new setup in her tank. Hopefully you'll be happy to explore the rest of the website and feel free to check Luna's about page and contact me if you have any questions regarding Luna!</p>
         </section>
     </main>
     <footer>
