--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 </body>
 </html>
     <header>
-        <h1>Contact Weekly Luna</h1>
+        <h1>Contact</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -35,7 +35,7 @@
     <main>
         <section id="contact">
             <h2>Contact</h2>
-            <p>You can reach me at <k href="mailto:draworanges.492@gmail.com">draworanges.492@gmail.com</k>. I am avaliable all week and will respond to any questions related to Luna and her life. Most of the time I will be able to respond back to you in about maximum 24 hours. </p>
+            <p>You can reach me at <k href="mailto:draworanges.492@gmail.com">draworanges.492@gmail.com</k>. I am available all week and will respond to any questions related to Luna and her life. </p>
         </section>
     </main>
     <footer>
