--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
         <a>&copy; Weekly Luna</a>
     </footer>
     <script src="script.js"></script>
+    <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>672131a384841f061f0502f4,67213175c357b906e6b6ba7e</script>
 </body>
 </html>
