--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 </body>
 </html>
     <header>
-        <h1>Contact</h1>
+        <h1>Weekly Luna</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
