--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script> window.chtlConfig = { chatbotId: "7847542977" } </script>
+<script async data-id="7847542977" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
     <img src="images/IMG_5600.jpg" alt="Luna">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
